--- a/src/frontend/src/pages/pong.html
+++ b/src/frontend/src/pages/pong.html
@@ -1,3 +1,6 @@
+
+import { Link } from "react-router-dom"
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,5 +14,8 @@
 	<h1>Pong Game</h1>
 	<canvas id="board"></canvas>
 	<p>Pong game test for ft_transendence</p>
+      <Link to="/" className="mt-10 px-6 py-3 rounded-full bg-pink-200 dark:bg-black-950 text-2xl text-white font-bold shadow-xl hover:bg-yellow-500 hover:scale-110 hover:italic hover:shadow-inner hover:outline hover:outline-4 hover:outline-cyan-500 transition">
+        ⬅ Retour</Link>
+    </div>
 </body>
 </html>
